Ready to deploy

--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Login Page</title>
+  <link rel="stylesheet" href="header.css">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -15,36 +16,7 @@
       flex-direction: column;
       min-height: 100vh;
     }
-    header {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 20px 0;
-      position: sticky; /* Changed to sticky */
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-    }
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      padding: 0; /* Remove default padding */
-    }
-    nav ul li {
-      margin: 0 20px;
-    }
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      padding: 10px 20px;
-      transition: background 0.3s ease, transform 0.3s ease;
-    }
-    nav ul li a:hover {
-      background-color: #fff;
-      color: #333;
-      border-radius: 5px;
-      transform: translateY(-2px);
-    }
+  
     .content {
       display: flex;
       justify-content: center;
