Added a window.onload function that checks the screen width. If it's less than 768 pixels (indicating a mobile device), an alert message is displayed, and the page attempts to close.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
             }
         }
     </style>
+    <script>
+        window.onload = function() {
+            if (window.innerWidth < 768) {
+                alert("Please view this page in desktop mode only. Otherwise, close the page.");
+                window.close(); // Attempt to close the window (may not work on all browsers)
+            }
+        };
+    </script>
 </head>
 <body>
 
