Desktop mode alert added

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="message">
                         <h1>Desktop Mode Recommended</h1>
                         <p>Please view this site in desktop mode for the best experience.</p>
-                        <p>If you're on a mobile device, please close this page.</p>
+                        <p>If you're on a mobile device, please click on Desktop mode site.</p>
                     </div>
                 `;
             });
